# advent_of_code

./: .gitignore  CMakeLists.txt  CMakeSettings.json
2020/day02/: main.cpp
2020/day03/: main.cpp
2020/day05/: main.cpp
2020/day06/: main.cpp
2020/day07/: main.cpp
2020/day08/: main.cpp
2020/day09/: main.cpp
2020/day11/: main.cpp
2020/day12/: main.cpp
2020/day13/: main.cpp
2020/day14/: main.cpp
2020/day15/: main.cpp
2020/day16/: main.cpp
2020/day17/: main.cpp
2020/day18/: main.cpp
2021/: cmakelists.txt
2021/day01/: main.cpp
2021/day02/: main.cpp
2021/day03/: main.cpp
2021/day04/: main.cpp
2021/day05/: main.cpp
2021/day06/: main.cpp
2021/day07/: main.cpp
2021/day08/: main.cpp
2021/day09/: main.cpp
2021/day10/: main.cpp
2021/day11/: main.cpp
2021/day12/: main.cpp
2021/day13/: main.cpp
2021/day14/: main.cpp
2021/day15/: main.cpp
2021/day16/: main.cpp
2021/day17/: input.txt  main.cpp
2021/day18/: main.cpp
2022/day01/: main.cpp
2022/day02/: main.cpp
2022/day03/: main.cpp
2022/day04/: main.cpp
2022/day05/: main.cpp
2022/day06/: main.cpp
2022/day07/: main.cpp
2022/day08/: main.cpp
cmake/: fileinput.cmake  subdir.cmake
cmake/template/: fileinput.h.template
day02/: CMakeLists.txt  input.txt
day03/: CMakeLists.txt  main.cpp
day04/: main.cpp
day10/: main.cpp
day13/: main.cpp
day17/: main.cpp
day18/: main.cpp
